# rVPN-core

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-COMMERCIAL.md  README.md  SECURITY.md
rvpn/: Cargo.toml  Dockerfile  docker-compose.yml
rvpn/crates/rust_lib_rvpn_flutter/: Cargo.toml
rvpn/crates/rust_lib_rvpn_flutter/src/: lib.rs
rvpn/crates/rvpn-client/: Cargo.toml
rvpn/crates/rvpn-client/src/: config.rs  dns.rs  dns_cache.rs  dns_proxy.rs  http_proxy.rs  identity_verification.rs  instrumentation.rs  lib.rs  main.rs  metrics.rs  metrics_exporter.rs  proxy_common.rs  router.rs  server_pool.rs  socks5.rs  socks5_tunnel.rs  split_tunnel.rs  stats.rs  stream_relay.rs  tls_boring.rs  tls_fingerprint_stub.rs  tun.rs  tunnel.rs  websocket.rs
rvpn/crates/rvpn-client/src/split_tunnel/: builtin_domains.rs  builtin_ips.rs
rvpn/crates/rvpn-client/tests/: tls_tests.rs  tofu_two_server.rs  websocket_tests.rs
rvpn/crates/rvpn-client/tests/common/: mod.rs
rvpn/crates/rvpn-core/: Cargo.toml
rvpn/crates/rvpn-core/src/: error.rs  frame_padding.rs  identity_pin.rs  lib.rs  routing.rs
rvpn/crates/rvpn-core/src/crypto/: cipher.rs  mod.rs  ratchet.rs  x3dh.rs
rvpn/crates/rvpn-core/src/protocol/: codec.rs  length_framing.rs  message.rs  mod.rs  multiplex.rs  packet.rs  padding.rs
rvpn/crates/rvpn-core/tests/: v1_stream_relay_roundtrip.rs
rvpn/crates/rvpn-mobile/: Cargo.toml  build.rs
rvpn/crates/rvpn-mobile/src/: android_tun.rs  android_tun_ffi.rs  api.rs  dns_proxy_ffi.rs  dns_server.rs  doh_client.rs  ffi.rs  flow_connector.rs  harmony_tun_ffi.rs  ios_tun.rs  ios_tun_ffi.rs  lib.rs  socks5_server.rs  swift_crypto.rs  ws.rs
rvpn/crates/rvpn-server/: Cargo.toml
rvpn/crates/rvpn-server/src/: config.rs  handler.rs  lib.rs  main.rs  tun_server.rs
rvpn/crates/rvpn-server/src/tests/: fixtures.rs  integration_tests.rs  mod.rs  routing_tests.rs  server_tests.rs
rvpn/crates/rvpn-server/src/tests/integration/: fixtures.rs  helpers.rs  mod.rs
rvpn/crates/rvpn-server/tests/: rotation_ceremony.rs
rvpn/crates/rvpn-split-tunnel/: Cargo.toml
rvpn/crates/rvpn-split-tunnel/examples/: dump_country_domains.rs  dump_country_ips.rs
rvpn/crates/rvpn-split-tunnel/src/: config.rs  dns_cache.rs  lib.rs  split_tunnel.rs
rvpn/crates/rvpn-tls/: Cargo.toml
rvpn/crates/rvpn-tls/src/: lib.rs  tls_boring.rs  tls_fingerprint.rs  tls_native.rs  tls_rustls.rs
