[workspace]
members = ["crates/rvpn-core", "crates/rvpn-tls", "crates/rvpn-split-tunnel", "crates/rvpn-client", "crates/rvpn-server", "crates/rvpn-mobile"]
resolver = "2"

[workspace.package]
version = "1.2.6"
edition = "2021"
authors = ["PDG Global Limited"]
license = "AGPLv2"
repository = "https://github.com/PDG-Global/rvpn"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }

# WebSocket
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect"] }
tungstenite = "0.21"

# TLS
rustls = { version = "0.22", default-features = false, features = ["tls12", "ring"] }
tokio-rustls = "0.25"
rustls-pemfile = "2.0"
rustls-platform-verifier = "0.3"
boring = "5"
tokio-boring = "5"

# Crypto
ring = { version = "0.17", features = ["std"] }
subtle = "2.5"
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde", "zeroize"] }
x25519-dalek = { version = "2.0", features = ["serde", "zeroize", "static_secrets"] }
curve25519-dalek = "4.1"
sha2 = "0.10"
sha1 = "0.10"
hkdf = "0.12"
hmac = "0.12"
aead = "0.5"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
zeroize = { version = "1.7", features = ["derive"] }

# Protocol
double-ratchet = "0.3"
snow = "0.10"

# Networking
fast-socks5 = "1.0"
tun-rs = { version = "2.0", features = ["async"] }
ip_network_table = "0.2"
ip_network = "0.4"

# Data structures
radix_trie = "0.2"
bloom = "0.3"
lru = "0.12"
hashbrown = "0.14"
phf = { version = "0.11", features = ["macros"] }
bloomfilter = "1.0"
rangemap = "1.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
bincode = "1.3"
serde_bytes = "0.11"
rkyv = { version = "0.7", features = ["validation", "strict"] }

# Storage
memmap2 = "0.9"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
zstd = "0.13"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
http = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
bytes = "1.5"
futures = "0.3"
futures-util = "0.3"
pin-project = "1.1"
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
data-encoding = "2"
hex = "0.4"
rand = "0.8"
regex = "1.10"
url = "2.5"
lazy_static = "1.4"
parking_lot = "0.12"

# Testing
tempfile = "3.8"
mockall = "0.12"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
