[package]
name = "rust_lib_rvpn_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
rvpn-core = { path = "../rvpn-core" }

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
tracing = "0.1"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
anyhow = "1.0"

[dependencies.uuid]
version = "1.6"
features = ["v4", "serde"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
