[package]
name = "rvpn-split-tunnel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "R-VPN split tunnel routing engine"

[lib]
name = "rvpn_split_tunnel"
path = "src/lib.rs"

[features]
default = ["builtin-ips", "builtin-domains"]
# Include 21K compiled-in CIDRs (~484KB binary size).
# Disable for iOS/mobile to load IPs dynamically from config file instead.
builtin-ips = []
# Include built-in domain lists (CN domains, ad domains, force tunnel domains).
builtin-domains = []

[dependencies]
# Async
tokio = { version = "1.35", default-features = false, features = ["sync", "fs", "rt", "rt-multi-thread", "time", "macros", "net"] }

# Networking
ip_network_table = "0.2"
ip_network = "0.4"

# Logging
tracing.workspace = true

# Error handling
anyhow.workspace = true

# Serialization (for SplitTunnelConfig)
serde.workspace = true
serde_json.workspace = true
